--- a/DyplomWork/Pages/AdminCabinet.xaml
+++ b/DyplomWork/Pages/AdminCabinet.xaml
@@ -11,7 +11,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="75"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <TextBlock Text="Кабинет администратора" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
@@ -24,6 +24,7 @@
                 <TextBox Name="DeleteUser" Margin="0 10 0 0"></TextBox>
                 <Button Content="Delete" Margin="0 10 0 0" Name="DeleteUserButton"></Button>
                 <Button Content="Добавить студента/преподавателя" Margin="0 10 0 0" Name="AddUser" Click="AddUser_Click"></Button>
+                <Button Content="Посмотреть список пользователей" Margin="0 10 0 0" Click="Button_Click"></Button>
                 <Button Content="Выйти" Name="ExitButton" Margin="0 10 0 0" Click="ExitButton_Click"></Button>
             </StackPanel>
         </Grid>
