--- a/DyplomWork/MainWindow.xaml
+++ b/DyplomWork/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DyplomWork"
         mc:Ignorable="d"
-        Title="Приложение для тестирования и проверки знаний + учёта посещаемости студентов на занятиях" Height="550" Width="900" WindowStartupLocation="CenterScreen" MinWidth="900" MinHeight="550" Icon="/Resources/graduation-hat.png">
+        Title="Приложение для тестирования и проверки знаний + учёта посещаемости студентов на занятиях" Height="750" Width="900" WindowStartupLocation="CenterScreen" MinWidth="900" MinHeight="550" MaxHeight="750" MaxWidth="1000" Icon="/Resources/graduation-hat.png">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="75"></RowDefinition>
@@ -13,7 +13,7 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#7dc408">
             <TextBlock Text="Приложение для тестирования и проверки знаний + учёта посещаемости студентов" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-            <Image Source="Resources/graduation-hat.png" HorizontalAlignment="Left"></Image>
+            <Image Source="Resources/graduation-hat.png" HorizontalAlignment="Left" Margin="20 0 0 0"></Image>
         </Grid>
         <Frame x:Name="MainFrame" Grid.Row="1" NavigationUIVisibility="Hidden"></Frame>
     </Grid>
