--- a/DyplomWork/Pages/Autorization.xaml
+++ b/DyplomWork/Pages/Autorization.xaml
@@ -22,7 +22,26 @@
                 <TextBox x:Name="EnterLoginBox" Grid.Row="1" Width="200" Margin="0 20 0 0"></TextBox>
                 <TextBlock Text="Пароль:"></TextBlock>
                 <PasswordBox x:Name="EnterPasswordBox" Grid.Row="1" Width="200" Margin="0 20 0 0"></PasswordBox>
-                <Button Content="Войти" Grid.Row="1" Margin="0 20 0 0" Click="Button_Click"></Button>
+                <Button Content="Войти" Name="LoginButton" Grid.Row="1" Margin="0 20 0 0" Click="Button_Click"></Button>
+
+                <Label x:Name="LabelCaptcha" Content="Пройдите капчу:" Visibility="Collapsed"></Label>
+                <TextBox x:Name="CaptchaBox" Width="100" IsEnabled="False" FontWeight="Bold" FontSize="16" Opacity="0.8" Visibility="Collapsed">
+                    <TextBox.Background>
+                        <ImageBrush ImageSource="/Resources/image12.jpg" Stretch="UniformToFill" TileMode="None">
+                            <ImageBrush.RelativeTransform>
+                                <TransformGroup>
+                                    <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="1" ScaleY="1"/>
+                                    <SkewTransform CenterX="0.5" CenterY="0.5"/>
+                                    <RotateTransform CenterX="0.5" CenterY="0.5"/>
+                                    <TranslateTransform X="0" Y="0"/>
+                                </TransformGroup>
+                            </ImageBrush.RelativeTransform>
+                        </ImageBrush>
+                    </TextBox.Background>
+                </TextBox>
+                <TextBox x:Name="CaptchaWriteBox" Width="100" Margin="10" Visibility="Collapsed"></TextBox>
+                <Button x:Name="GuestButton" Content="Гость"
+                    Click="GuestButton_Click" Margin="10" Visibility="Visible"></Button>
             </StackPanel>
         </Grid>
     </Grid>
