--- a/DyplomWork/Pages/AdminCabinet.xaml
+++ b/DyplomWork/Pages/AdminCabinet.xaml
@@ -22,7 +22,7 @@
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBlock Text="ID студента/преподавателя:"></TextBlock>
                 <TextBox Name="DeleteUser" Margin="0 10 0 0"></TextBox>
-                <Button Content="Delete" Margin="0 10 0 0" Name="DeleteUserButton"></Button>
+                <Button Content="Delete" Margin="0 10 0 0" Name="DeleteUserButton" Click="DeleteUserButton_Click"></Button>
                 <Button Content="Добавить студента/преподавателя" Margin="0 10 0 0" Name="AddUser" Click="AddUser_Click"></Button>
                 <Button Content="Посмотреть список пользователей" Margin="0 10 0 0" Click="Button_Click"></Button>
                 <Button Content="Выйти" Name="ExitButton" Margin="0 10 0 0" Click="ExitButton_Click"></Button>
