--- a/DyplomWork/Pages/AddStudent.xaml
+++ b/DyplomWork/Pages/AddStudent.xaml
@@ -27,10 +27,10 @@
                 <TextBlock Text="Password:"></TextBlock>
                 <PasswordBox Name="EnterPasswordBox"></PasswordBox>
                 <TextBlock Text="Номер группы:"></TextBlock>
-                <ComboBox Name="EnterGroupNumberBox" DisplayMemberPath="groupNumber"></ComboBox>
+                <TextBox Name="EnterGroupNumberBox"></TextBox>
                 <TextBlock Text="Курс:"></TextBlock>
-                <ComboBox Name="EnterCourseBox" DisplayMemberPath="courseYear"></ComboBox>
-                <Button Content="Добавить" Name="Add" Click="Add_Click"></Button>
+                <TextBox Name="EnterCourseBox"></TextBox>
+                <Button Content="Добавить" Name="Add" Click="Add_Click_1"></Button>
                 <Button Content="Выйти" Width="200" Height="46" Click="Button_Click"></Button>
             </StackPanel>
 
