--- a/DyplomWork/Pages/AddTest.xaml
+++ b/DyplomWork/Pages/AddTest.xaml
@@ -20,8 +20,8 @@
         <Grid Grid.Row="1">
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                 <TextBlock Text="Название теста:"></TextBlock>
-                <ComboBox Name="SelectTitle" Width="200"></ComboBox>
-                <TextBlock Text="Название теста:"></TextBlock>
+                <TextBox Name="SelectTitle" Width="200"></TextBox>
+                <TextBlock Text="Описание теста:"></TextBlock>
                 <TextBox Name="EnterDesctiption" Width="200"></TextBox>
                 <TextBlock Text="Максимальный балл:"></TextBlock>
                 <TextBox Name="EnterMaxScore" Width="200"></TextBox>
@@ -29,7 +29,7 @@
                 <TextBox Name="EnterTimeLimit" Width="200"></TextBox>
                 <TextBlock Text="Номер курса:"></TextBlock>
                 <TextBox Name="EnterCourse" Width="200"></TextBox>
-                <Button Content="Добавить тест"></Button>
+                <Button Content="Добавить тест" Click="Button_Click_1"></Button>
                 <Button Content="Назад" Click="Button_Click"></Button>
             </StackPanel>
         </Grid>
