--- a/DyplomWork/Pages/StudentCabinet.xaml
+++ b/DyplomWork/Pages/StudentCabinet.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:DyplomWork.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="800" d:DesignWidth="800"
       Title="StudentCabinet">
 
     <Grid>
@@ -45,7 +45,11 @@
             </ListView>
         </Grid>
         <Grid Grid.Row="3">
-            <Button Content="Выйти" Name="ExitButton" Click="ExitButton_Click"></Button>
+            <WrapPanel HorizontalAlignment="Left" Orientation="Horizontal">
+                <Button Content="Выйти" Name="ExitButton" Click="ExitButton_Click" HorizontalAlignment="Left" Width="200"></Button>
+                <Button Content="Добавить отсчёт о тестировании" HorizontalAlignment="Right" Margin="20 0 0 0"></Button>
+            </WrapPanel>
+            
         </Grid>
     </Grid>
 </Page>
