--- a/DyplomWork/Pages/StudentCabinet.xaml
+++ b/DyplomWork/Pages/StudentCabinet.xaml
@@ -47,7 +47,7 @@
         <Grid Grid.Row="3">
             <WrapPanel HorizontalAlignment="Left" Orientation="Horizontal">
                 <Button Content="Выйти" Name="ExitButton" Click="ExitButton_Click" HorizontalAlignment="Left" Width="200"></Button>
-                <Button Content="Добавить отсчёт о тестировании" HorizontalAlignment="Right" Margin="20 0 0 0"></Button>
+                <Button Content="Добавить отсчёт о тестировании" Name="GoToAddReport" HorizontalAlignment="Right" Margin="20 0 0 0" Click="GoToAddReport_Click"></Button>
             </WrapPanel>
             
         </Grid>
