--- a/DyplomWork/Pages/ShowReportStudentVersion.xaml
+++ b/DyplomWork/Pages/ShowReportStudentVersion.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="DyplomWork.Pages.ViewReport"
+﻿<Page x:Class="DyplomWork.Pages.ShowReportStudentVersion"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:DyplomWork.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="750" d:DesignWidth="800"
-      Title="ViewReport">
+      Title="ShowReportStudentVersion">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -34,14 +34,13 @@
                             <TextBlock Text="{Binding Female}"></TextBlock>
                             <TextBlock Text="{Binding Name}"></TextBlock>
                             <TextBlock Text="{Binding TitleTest.title}"></TextBlock>
-                            <Button Content="Редактировать" Width="200"></Button>
                         </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
         </Grid>
         <Grid Grid.Row="2">
-            <Button Content="Выйти" Click="Button_Click"></Button>
+            <Button Content="Выйти"  Name="GoStudentCabinetBack" Click="GoStudentCabinetBack_Click"></Button>
         </Grid>
     </Grid>
 </Page>
