--- a/DyplomWork/Pages/ShowUsers.xaml
+++ b/DyplomWork/Pages/ShowUsers.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:DyplomWork.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="800" d:DesignWidth="800"
       Title="ShowUsers">
 
     <Grid>
@@ -45,7 +45,11 @@
             </ListView>
         </Grid>
         <Grid Grid.Row="2">
-            <Button Content="Выйти" Click="Button_Click"></Button>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Button Content="Выйти" Click="Button_Click" Width="200"></Button>
+                <Button Content="Удалить" Name="DeleteUserButton" Width="200" Margin="20 0 0 0"></Button>
+            </StackPanel>
+            
         </Grid>
     </Grid>
 </Page>
