--- a/DyplomWork/Pages/TeacherCabinet.xaml
+++ b/DyplomWork/Pages/TeacherCabinet.xaml
@@ -73,7 +73,7 @@
             </Grid>
             <Grid Grid.Column="1">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
-                    <Button Content="Удалить тест" Name="DeleteTestButton"></Button>
+                    <Button Content="Удалить тест" Name="DeleteTestButton" Click="DeleteTestButton_Click"></Button>
                     <Button Content="Посмотреть отсчёт" Name="ShowReport" Margin="0 10 0 0" Click="ShowReport_Click"></Button>
                     <Button Content="Выйти" Name="ExitButton" Margin="0 10 0 0" Click="ExitButton_Click"></Button>
                 </StackPanel>
