--- a/DyplomWork/Pages/ViewReport.xaml
+++ b/DyplomWork/Pages/ViewReport.xaml
@@ -34,6 +34,10 @@
                             <TextBlock Text="{Binding Female}"></TextBlock>
                             <TextBlock Text="{Binding Name}"></TextBlock>
                             <TextBlock Text="{Binding TitleTest.title}"></TextBlock>
+                            <TextBlock>
+                                <Run Text="Оценка:"></Run>
+                                <Run Text="{Binding Mark}"></Run>
+                            </TextBlock>
                             <Button Content="Редактировать" Name="EditReport" Width="200" Click="EditReport_Click"></Button>
                         </StackPanel>
                     </DataTemplate>
